Adding remaining images to portfolio page

--- a/src/content/portfolio.pug
+++ b/src/content/portfolio.pug
@@ -27,13 +27,13 @@ h1 Portfolio
           td
             a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
         tr
-        td Production gallery: 
-        td
-          a(href='https://www.artstation.com/artwork/RyNNRy') See it on Artstation
+          td Behind the scenes: 
+          td
+            a(href='https://www.artstation.com/artwork/RyNNRy') See it on Artstation
         tr
-        td Final result:
-        td
-          a(href='https://grayjewellery.com.au/collections/blossoms') Visit the product page
+          td Final result:
+          td
+            a(href='https://grayjewellery.com.au/collections/blossoms') Visit the product page
 
     .column
       img(src='./assets/images/portfolio/open-studios-1-winter-banner-ring.jpg' style=' width: 100%; height: auto;')
@@ -47,20 +47,290 @@ h1 Portfolio
           td
             a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
         tr
-        td Production gallery: 
-        td
-          a(href='https://www.artstation.com/artwork/vDwby6') See it on Artstation
+          td Behind the scenes: 
+          td
+            a(href='https://www.artstation.com/artwork/vDwby6') See it on Artstation
         tr
-        td Final result:
-        td
-          a(href='https://grayjewellery.com.au/collections/all-jewellery?filter.v.price.gte=&filter.v.price.lte=&filter.p.tag=Yule.&sort_by=title-ascending') Visit the product page
+          td Final result:
+          td
+            a(href='https://grayjewellery.com.au/collections/all-jewellery?filter.v.price.gte=&filter.v.price.lte=&filter.p.tag=Yule.&sort_by=title-ascending') Visit the product page
   .row
     .column
-      img(src='./assets/images/p3.jpg' style=' width: 100%; height: auto;')
+      img(src='./assets/images/portfolio/open-studios-gemini-banner.jpg' style=' width: 100%; height: auto;')
+      h3 White Gold and Pink Spinel Sakura Blossoms Product and Marketing
+      table(class='portfolio_item')
+        tr
+          td Deliverables:
+          td Social Banners, 3D Renders and Finished Product of Pink Spinel 18k White Gold Sakura Pendant
+        tr
+          td Client: 
+          td
+            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+        tr
+          td Behind the scenes: 
+          td
+            a(href='https://www.artstation.com/artwork/RyNNRy') See it on Artstation
+        tr
+          td Final result:
+          td
+            a(href='https://grayjewellery.com.au/collections/blossoms') Visit the product page
+
     .column
-      img(src='./assets/images/p4.jpg' style=' width: 100%; height: auto;')
+      img(src='./assets/images/portfolio/open-studios-dsc-2682-large.jpg' style=' width: 100%; height: auto;')
+      h3 Yule Watercolour Campaign Banners for Winter Season of 2022
+      table(class='portfolio_item')
+        tr
+          td Deliverables:
+          td Watercolour banners designed for marketing the Yule design for the winter season.
+        tr
+          td Client: 
+          td
+            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+        tr
+          td Behind the scenes: 
+          td
+            a(href='https://www.artstation.com/artwork/vDwby6') See it on Artstation
+        tr
+          td Final result:
+          td
+            a(href='https://grayjewellery.com.au/collections/all-jewellery?filter.v.price.gte=&filter.v.price.lte=&filter.p.tag=Yule.&sort_by=title-ascending') Visit the product page
   .row
     .column
-      img(src='./assets/images/p6.jpg' style=' width: 100%; height: auto;')
+      img(src='./assets/images/portfolio/open-studios-mabon.jpg' style=' width: 100%; height: auto;')
+      h3 White Gold and Pink Spinel Sakura Blossoms Product and Marketing
+      table(class='portfolio_item')
+        tr
+          td Deliverables:
+          td Social Banners, 3D Renders and Finished Product of Pink Spinel 18k White Gold Sakura Pendant
+        tr
+          td Client: 
+          td
+            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+        tr
+          td Behind the scenes: 
+          td
+            a(href='https://www.artstation.com/artwork/RyNNRy') See it on Artstation
+        tr
+          td Final result:
+          td
+            a(href='https://grayjewellery.com.au/collections/blossoms') Visit the product page
+
     .column
-      img(src='./assets/images/p5.jpg' style=' width: 100%; height: auto;')
+      img(src='./assets/images/portfolio/open-studios-foxtail.jpg' style=' width: 100%; height: auto;')
+      h3 Yule Watercolour Campaign Banners for Winter Season of 2022
+      table(class='portfolio_item')
+        tr
+          td Deliverables:
+          td Watercolour banners designed for marketing the Yule design for the winter season.
+        tr
+          td Client: 
+          td
+            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+        tr
+          td Behind the scenes: 
+          td
+            a(href='https://www.artstation.com/artwork/vDwby6') See it on Artstation
+        tr
+          td Final result:
+          td
+            a(href='https://grayjewellery.com.au/collections/all-jewellery?filter.v.price.gte=&filter.v.price.lte=&filter.p.tag=Yule.&sort_by=title-ascending') Visit the product page
+  .row
+    .column
+      img(src='./assets/images/portfolio/open-studios-morganite.jpg' style=' width: 100%; height: auto;')
+      h3 White Gold and Pink Spinel Sakura Blossoms Product and Marketing
+      table(class='portfolio_item')
+        tr
+          td Deliverables:
+          td Social Banners, 3D Renders and Finished Product of Pink Spinel 18k White Gold Sakura Pendant
+        tr
+          td Client: 
+          td
+            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+        tr
+          td Behind the scenes: 
+          td
+            a(href='https://www.artstation.com/artwork/RyNNRy') See it on Artstation
+        tr
+          td Final result:
+          td
+            a(href='https://grayjewellery.com.au/collections/blossoms') Visit the product page
+
+    .column
+      img(src='./assets/images/portfolio/open-studios-character-design.jpg' style=' width: 100%; height: auto;')
+      h3 Yule Watercolour Campaign Banners for Winter Season of 2022
+      table(class='portfolio_item')
+        tr
+          td Deliverables:
+          td Watercolour banners designed for marketing the Yule design for the winter season.
+        tr
+          td Client: 
+          td
+            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+        tr
+          td Behind the scenes: 
+          td
+            a(href='https://www.artstation.com/artwork/vDwby6') See it on Artstation
+        tr
+          td Final result:
+          td
+            a(href='https://grayjewellery.com.au/collections/all-jewellery?filter.v.price.gte=&filter.v.price.lte=&filter.p.tag=Yule.&sort_by=title-ascending') Visit the product page
+  .row
+    .column
+      img(src='./assets/images/portfolio/open-studios-aquamarine.jpg' style=' width: 100%; height: auto;')
+      h3 White Gold and Pink Spinel Sakura Blossoms Product and Marketing
+      table(class='portfolio_item')
+        tr
+          td Deliverables:
+          td Social Banners, 3D Renders and Finished Product of Pink Spinel 18k White Gold Sakura Pendant
+        tr
+          td Client: 
+          td
+            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+        tr
+          td Behind the scenes: 
+          td
+            a(href='https://www.artstation.com/artwork/RyNNRy') See it on Artstation
+        tr
+          td Final result:
+          td
+            a(href='https://grayjewellery.com.au/collections/blossoms') Visit the product page
+
+    .column
+      img(src='./assets/images/portfolio/open-studios-kamigen.jpg' style=' width: 100%; height: auto;')
+      h3 Yule Watercolour Campaign Banners for Winter Season of 2022
+      table(class='portfolio_item')
+        tr
+          td Deliverables:
+          td Watercolour banners designed for marketing the Yule design for the winter season.
+        tr
+          td Client: 
+          td
+            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+        tr
+          td Behind the scenes: 
+          td
+            a(href='https://www.artstation.com/artwork/vDwby6') See it on Artstation
+        tr
+          td Final result:
+          td
+            a(href='https://grayjewellery.com.au/collections/all-jewellery?filter.v.price.gte=&filter.v.price.lte=&filter.p.tag=Yule.&sort_by=title-ascending') Visit the product page
+  .row
+    .column
+      img(src='./assets/images/portfolio/open-studios-fanta-garnet.jpg' style=' width: 100%; height: auto;')
+      h3 White Gold and Pink Spinel Sakura Blossoms Product and Marketing
+      table(class='portfolio_item')
+        tr
+          td Deliverables:
+          td Social Banners, 3D Renders and Finished Product of Pink Spinel 18k White Gold Sakura Pendant
+        tr
+          td Client: 
+          td
+            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+        tr
+          td Behind the scenes: 
+          td
+            a(href='https://www.artstation.com/artwork/RyNNRy') See it on Artstation
+        tr
+          td Final result:
+          td
+            a(href='https://grayjewellery.com.au/collections/blossoms') Visit the product page
+
+    .column
+      img(src='./assets/images/portfolio/open-studios-emerald.jpg' style=' width: 100%; height: auto;')
+      h3 Yule Watercolour Campaign Banners for Winter Season of 2022
+      table(class='portfolio_item')
+        tr
+          td Deliverables:
+          td Watercolour banners designed for marketing the Yule design for the winter season.
+        tr
+          td Client: 
+          td
+            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+        tr
+          td Behind the scenes: 
+          td
+            a(href='https://www.artstation.com/artwork/vDwby6') See it on Artstation
+        tr
+          td Final result:
+          td
+            a(href='https://grayjewellery.com.au/collections/all-jewellery?filter.v.price.gte=&filter.v.price.lte=&filter.p.tag=Yule.&sort_by=title-ascending') Visit the product page
+  .row
+    .column
+      img(src='./assets/images/portfolio/open-studios-2019-web-design-home.jpg' style=' width: 100%; height: auto;')
+      h3 White Gold and Pink Spinel Sakura Blossoms Product and Marketing
+      table(class='portfolio_item')
+        tr
+          td Deliverables:
+          td Social Banners, 3D Renders and Finished Product of Pink Spinel 18k White Gold Sakura Pendant
+        tr
+          td Client: 
+          td
+            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+        tr
+          td Behind the scenes: 
+          td
+            a(href='https://www.artstation.com/artwork/RyNNRy') See it on Artstation
+        tr
+          td Final result:
+          td
+            a(href='https://grayjewellery.com.au/collections/blossoms') Visit the product page
+
+    .column
+      img(src='./assets/images/portfolio/open-studios-kamigengame.jpg' style=' width: 100%; height: auto;')
+      h3 Yule Watercolour Campaign Banners for Winter Season of 2022
+      table(class='portfolio_item')
+        tr
+          td Deliverables:
+          td Watercolour banners designed for marketing the Yule design for the winter season.
+        tr
+          td Client: 
+          td
+            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+        tr
+          td Behind the scenes: 
+          td
+            a(href='https://www.artstation.com/artwork/vDwby6') See it on Artstation
+        tr
+          td Final result:
+          td
+            a(href='https://grayjewellery.com.au/collections/all-jewellery?filter.v.price.gte=&filter.v.price.lte=&filter.p.tag=Yule.&sort_by=title-ascending') Visit the product page
+  .row
+    .column
+      img(src='./assets/images/portfolio/open-studios-open-studios-dsc-2483-darker.jpg' style=' width: 100%; height: auto;')
+      h3 White Gold and Pink Spinel Sakura Blossoms Product and Marketing
+      table(class='portfolio_item')
+        tr
+          td Deliverables:
+          td Social Banners, 3D Renders and Finished Product of Pink Spinel 18k White Gold Sakura Pendant
+        tr
+          td Client: 
+          td
+            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+        tr
+          td Behind the scenes: 
+          td
+            a(href='https://www.artstation.com/artwork/RyNNRy') See it on Artstation
+        tr
+          td Final result:
+          td
+            a(href='https://grayjewellery.com.au/collections/blossoms') Visit the product page
+
+    .column
+      img(src='./assets/images/portfolio/open-studios-langenium.jpg' style=' width: 100%; height: auto;')
+      h3 Yule Watercolour Campaign Banners for Winter Season of 2022
+      table(class='portfolio_item')
+        tr
+          td Deliverables:
+          td Watercolour banners designed for marketing the Yule design for the winter season.
+        tr
+          td Client: 
+          td
+            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+        tr
+          td Behind the scenes: 
+          td
+            a(href='https://www.artstation.com/artwork/vDwby6') See it on Artstation
+        tr
+          td Final result:
+          td
+            a(href='https://grayjewellery.com.au/collections/all-jewellery?filter.v.price.gte=&filter.v.price.lte=&filter.p.tag=Yule.&sort_by=title-ascending') Visit the product page
