First 6 portfolio entries done

--- a/src/content/portfolio.pug
+++ b/src/content/portfolio.pug
@@ -5,7 +5,7 @@ style.
     border-collapse: collapse;
   }
   tr td:nth-child(1) {
-    width: 30%;
+    width: 35%;
   }
   td {
     padding: 1rem;
@@ -21,7 +21,7 @@ h1 Portfolio
       table(class='portfolio_item')
         tr
           td Deliverables:
-          td Social Banners, 3D Renders and Finished Product of Pink Spinel 18k White Gold Sakura Pendant
+          td Pink spinel 18k white gold sakura blossom designs, 3D renders and production.
         tr
           td Client: 
           td
@@ -31,9 +31,9 @@ h1 Portfolio
           td
             a(href='https://www.artstation.com/artwork/RyNNRy') See it on Artstation
         tr
-          td Final result:
+          td See it in action:
           td
-            a(href='https://grayjewellery.com.au/collections/blossoms') Visit the product page
+            a(href='https://grayjewellery.com.au/collections/blossoms') View the Blossoms collection
 
     .column
       img(src='./assets/images/portfolio/open-studios-1-winter-banner-ring.jpg' style=' width: 100%; height: auto;')
@@ -51,37 +51,37 @@ h1 Portfolio
           td
             a(href='https://www.artstation.com/artwork/vDwby6') See it on Artstation
         tr
-          td Final result:
+          td See it in action:
           td
-            a(href='https://grayjewellery.com.au/collections/all-jewellery?filter.v.price.gte=&filter.v.price.lte=&filter.p.tag=Yule.&sort_by=title-ascending') Visit the product page
+            a(href='https://grayjewellery.com.au/collections/all-jewellery?filter.v.price.gte=&filter.v.price.lte=&filter.p.tag=Yule.&sort_by=title-ascending') View the Yule collection
   .row
     .column
       img(src='./assets/images/portfolio/open-studios-gemini-banner.jpg' style=' width: 100%; height: auto;')
-      h3 White Gold and Pink Spinel Sakura Blossoms Product and Marketing
+      h3 Gemini Zodiac Solid Gold Design, Production and Marketing
       table(class='portfolio_item')
         tr
           td Deliverables:
-          td Social Banners, 3D Renders and Finished Product of Pink Spinel 18k White Gold Sakura Pendant
+          td Zodiac solid gold jewellery design, 3D renders and social media marketing banners.
         tr
-          td Client: 
+          td Client:
           td
             a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
         tr
           td Behind the scenes: 
           td
-            a(href='https://www.artstation.com/artwork/RyNNRy') See it on Artstation
+            a(href='https://www.artstation.com/artwork/Dvzw8R') See it on Artstation
         tr
-          td Final result:
+          td See it in action:
           td
-            a(href='https://grayjewellery.com.au/collections/blossoms') Visit the product page
-
+            a(href='https://grayjewellery.com.au/collections/all-jewellery?filter.v.price.gte=&filter.v.price.lte=&filter.p.tag=Gemini&sort_by=title-ascending') View the Gemini collection
     .column
       img(src='./assets/images/portfolio/open-studios-dsc-2682-large.jpg' style=' width: 100%; height: auto;')
-      h3 Yule Watercolour Campaign Banners for Winter Season of 2022
+      h3 Madeira Citrine 14K Gold pendant fine jewellery commission
+
       table(class='portfolio_item')
         tr
           td Deliverables:
-          td Watercolour banners designed for marketing the Yule design for the winter season.
+          td Custom 3D model, renders and manufacture to fit selected gem.
         tr
           td Client: 
           td
@@ -89,19 +89,18 @@ h1 Portfolio
         tr
           td Behind the scenes: 
           td
-            a(href='https://www.artstation.com/artwork/vDwby6') See it on Artstation
+            a(href='https://www.artstation.com/artwork/n0BVeE') See it on Artstation
         tr
-          td Final result:
-          td
-            a(href='https://grayjewellery.com.au/collections/all-jewellery?filter.v.price.gte=&filter.v.price.lte=&filter.p.tag=Yule.&sort_by=title-ascending') Visit the product page
+          td See it in action:
+          td N/A, private collection.
   .row
     .column
       img(src='./assets/images/portfolio/open-studios-mabon.jpg' style=' width: 100%; height: auto;')
-      h3 White Gold and Pink Spinel Sakura Blossoms Product and Marketing
+      h3 Marketing banners for jewellery clients website and socials
       table(class='portfolio_item')
         tr
           td Deliverables:
-          td Social Banners, 3D Renders and Finished Product of Pink Spinel 18k White Gold Sakura Pendant
+          td Digital photomanipulation, 3D renders, vector graphic design and social media marketing.
         tr
           td Client: 
           td
@@ -109,19 +108,19 @@ h1 Portfolio
         tr
           td Behind the scenes: 
           td
-            a(href='https://www.artstation.com/artwork/RyNNRy') See it on Artstation
+            a(href='https://www.artstation.com/artwork/RyeavD') See it on Artstation
         tr
-          td Final result:
+          td See it in action:
           td
-            a(href='https://grayjewellery.com.au/collections/blossoms') Visit the product page
+            a(href='https://www.instagram.com/garrettrayjewellery/') Visit the client's Instagram
 
     .column
       img(src='./assets/images/portfolio/open-studios-foxtail.jpg' style=' width: 100%; height: auto;')
-      h3 Yule Watercolour Campaign Banners for Winter Season of 2022
+      h3 Handmade Silver Foxtail Chain Design and Product Marketing
       table(class='portfolio_item')
         tr
           td Deliverables:
-          td Watercolour banners designed for marketing the Yule design for the winter season.
+          td Handmade chains, still life studio photography and online product marketing.
         tr
           td Client: 
           td
@@ -129,11 +128,11 @@ h1 Portfolio
         tr
           td Behind the scenes: 
           td
-            a(href='https://www.artstation.com/artwork/vDwby6') See it on Artstation
+            a(href='https://www.artstation.com/artwork/obdXBw') See it on Artstation
         tr
-          td Final result:
+          td See it in action:
           td
-            a(href='https://grayjewellery.com.au/collections/all-jewellery?filter.v.price.gte=&filter.v.price.lte=&filter.p.tag=Yule.&sort_by=title-ascending') Visit the product page
+            a(href='https://grayjewellery.com.au/products/fine-silver-handmade-999-foxtail-double-loop-in-loop-chain-choker-to-necklace-length-various-lengths-available?_pos=1&_sid=b1b88f859&_ss=r') Visit the product page
   .row
     .column
       img(src='./assets/images/portfolio/open-studios-morganite.jpg' style=' width: 100%; height: auto;')
@@ -151,7 +150,7 @@ h1 Portfolio
           td
             a(href='https://www.artstation.com/artwork/RyNNRy') See it on Artstation
         tr
-          td Final result:
+          td See it in action:
           td
             a(href='https://grayjewellery.com.au/collections/blossoms') Visit the product page
 
@@ -171,7 +170,7 @@ h1 Portfolio
           td
             a(href='https://www.artstation.com/artwork/vDwby6') See it on Artstation
         tr
-          td Final result:
+          td See it in action:
           td
             a(href='https://grayjewellery.com.au/collections/all-jewellery?filter.v.price.gte=&filter.v.price.lte=&filter.p.tag=Yule.&sort_by=title-ascending') Visit the product page
   .row
@@ -191,7 +190,7 @@ h1 Portfolio
           td
             a(href='https://www.artstation.com/artwork/RyNNRy') See it on Artstation
         tr
-          td Final result:
+          td See it in action:
           td
             a(href='https://grayjewellery.com.au/collections/blossoms') Visit the product page
 
@@ -211,7 +210,7 @@ h1 Portfolio
           td
             a(href='https://www.artstation.com/artwork/vDwby6') See it on Artstation
         tr
-          td Final result:
+          td See it in action:
           td
             a(href='https://grayjewellery.com.au/collections/all-jewellery?filter.v.price.gte=&filter.v.price.lte=&filter.p.tag=Yule.&sort_by=title-ascending') Visit the product page
   .row
@@ -231,7 +230,7 @@ h1 Portfolio
           td
             a(href='https://www.artstation.com/artwork/RyNNRy') See it on Artstation
         tr
-          td Final result:
+          td See it in action:
           td
             a(href='https://grayjewellery.com.au/collections/blossoms') Visit the product page
 
@@ -251,7 +250,7 @@ h1 Portfolio
           td
             a(href='https://www.artstation.com/artwork/vDwby6') See it on Artstation
         tr
-          td Final result:
+          td See it in action:
           td
             a(href='https://grayjewellery.com.au/collections/all-jewellery?filter.v.price.gte=&filter.v.price.lte=&filter.p.tag=Yule.&sort_by=title-ascending') Visit the product page
   .row
@@ -271,7 +270,7 @@ h1 Portfolio
           td
             a(href='https://www.artstation.com/artwork/RyNNRy') See it on Artstation
         tr
-          td Final result:
+          td See it in action:
           td
             a(href='https://grayjewellery.com.au/collections/blossoms') Visit the product page
 
@@ -291,7 +290,7 @@ h1 Portfolio
           td
             a(href='https://www.artstation.com/artwork/vDwby6') See it on Artstation
         tr
-          td Final result:
+          td See it in action:
           td
             a(href='https://grayjewellery.com.au/collections/all-jewellery?filter.v.price.gte=&filter.v.price.lte=&filter.p.tag=Yule.&sort_by=title-ascending') Visit the product page
   .row
@@ -311,7 +310,7 @@ h1 Portfolio
           td
             a(href='https://www.artstation.com/artwork/RyNNRy') See it on Artstation
         tr
-          td Final result:
+          td See it in action:
           td
             a(href='https://grayjewellery.com.au/collections/blossoms') Visit the product page
 
@@ -331,6 +330,6 @@ h1 Portfolio
           td
             a(href='https://www.artstation.com/artwork/vDwby6') See it on Artstation
         tr
-          td Final result:
+          td See it in action:
           td
             a(href='https://grayjewellery.com.au/collections/all-jewellery?filter.v.price.gte=&filter.v.price.lte=&filter.p.tag=Yule.&sort_by=title-ascending') Visit the product page
