Fourth row and wording tweaks

--- a/src/content/portfolio.pug
+++ b/src/content/portfolio.pug
@@ -23,7 +23,7 @@ h1 Portfolio
           td Deliverables:
           td Pink spinel 18k white gold sakura blossom designs, 3D renders and production.
         tr
-          td Client: 
+          td Client / Project: 
           td
             a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
         tr
@@ -43,7 +43,7 @@ h1 Portfolio
           td Deliverables:
           td Watercolour banners designed for marketing the Yule design for the winter season.
         tr
-          td Client: 
+          td Client / Project: 
           td
             a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
         tr
@@ -63,7 +63,7 @@ h1 Portfolio
           td Deliverables:
           td Zodiac solid gold jewellery design, 3D renders and social media marketing banners.
         tr
-          td Client:
+          td Client / Project:
           td
             a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
         tr
@@ -83,7 +83,7 @@ h1 Portfolio
           td Deliverables:
           td Custom 3D model, renders and manufacture to fit selected gem.
         tr
-          td Client: 
+          td Client / Project: 
           td
             a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
         tr
@@ -102,7 +102,7 @@ h1 Portfolio
           td Deliverables:
           td Digital photomanipulation, 3D renders, vector graphic design and social media marketing.
         tr
-          td Client: 
+          td Client / Project: 
           td
             a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
         tr
@@ -122,7 +122,7 @@ h1 Portfolio
           td Deliverables:
           td Handmade chains, still life studio photography and online product marketing.
         tr
-          td Client: 
+          td Client / Project: 
           td
             a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
         tr
@@ -132,47 +132,47 @@ h1 Portfolio
         tr
           td See it in action:
           td
-            a(href='https://grayjewellery.com.au/products/fine-silver-handmade-999-foxtail-double-loop-in-loop-chain-choker-to-necklace-length-various-lengths-available?_pos=1&_sid=b1b88f859&_ss=r') Visit the product page
+            a(href='https://grayjewellery.com.au/products/fine-silver-handmade-999-foxtail-double-loop-in-loop-chain-choker-to-necklace-length-various-lengths-available') Visit the product page
   .row
     .column
       img(src='./assets/images/portfolio/open-studios-morganite.jpg' style=' width: 100%; height: auto;')
-      h3 White Gold and Pink Spinel Sakura Blossoms Product and Marketing
+      h3 Morganite 18k Gold Earrings Handmade
       table(class='portfolio_item')
         tr
           td Deliverables:
-          td Social Banners, 3D Renders and Finished Product of Pink Spinel 18k White Gold Sakura Pendant
+          td Handmade earrings, still life studio photography and online product marketing.
         tr
-          td Client: 
+          td Client / Project: 
           td
             a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
         tr
           td Behind the scenes: 
           td
-            a(href='https://www.artstation.com/artwork/RyNNRy') See it on Artstation
+            a(href='https://www.artstation.com/artwork/6NXxOV') See it on Artstation
         tr
           td See it in action:
           td
-            a(href='https://grayjewellery.com.au/collections/blossoms') Visit the product page
+            a(href='https://grayjewellery.com.au/products/18k-gold-morganite-earrings') Visit the product page
 
     .column
       img(src='./assets/images/portfolio/open-studios-character-design.jpg' style=' width: 100%; height: auto;')
-      h3 Yule Watercolour Campaign Banners for Winter Season of 2022
+      h3 Taka - Manga Style Character Design and Renders from Kamigen
       table(class='portfolio_item')
         tr
           td Deliverables:
-          td Watercolour banners designed for marketing the Yule design for the winter season.
+          td Character design in 2D, recreated in 3D and placed into comics frames.
         tr
-          td Client: 
+          td Client / Project: 
           td
-            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+            a(href='https://kamigen.com/') Kamigen
         tr
           td Behind the scenes: 
           td
-            a(href='https://www.artstation.com/artwork/vDwby6') See it on Artstation
+            a(href='https://www.artstation.com/artwork/m8lze8') See it on Artstation
         tr
           td See it in action:
           td
-            a(href='https://grayjewellery.com.au/collections/all-jewellery?filter.v.price.gte=&filter.v.price.lte=&filter.p.tag=Yule.&sort_by=title-ascending') Visit the product page
+            a(href='https://www.instagram.com/p/Cr-84t1JqnA/?img_index=1') Kamigen Comics on Instagram
   .row
     .column
       img(src='./assets/images/portfolio/open-studios-aquamarine.jpg' style=' width: 100%; height: auto;')
@@ -182,7 +182,7 @@ h1 Portfolio
           td Deliverables:
           td Social Banners, 3D Renders and Finished Product of Pink Spinel 18k White Gold Sakura Pendant
         tr
-          td Client: 
+          td Client / Project: 
           td
             a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
         tr
@@ -202,7 +202,7 @@ h1 Portfolio
           td Deliverables:
           td Watercolour banners designed for marketing the Yule design for the winter season.
         tr
-          td Client: 
+          td Client / Project: 
           td
             a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
         tr
@@ -222,7 +222,7 @@ h1 Portfolio
           td Deliverables:
           td Social Banners, 3D Renders and Finished Product of Pink Spinel 18k White Gold Sakura Pendant
         tr
-          td Client: 
+          td Client / Project: 
           td
             a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
         tr
@@ -242,7 +242,7 @@ h1 Portfolio
           td Deliverables:
           td Watercolour banners designed for marketing the Yule design for the winter season.
         tr
-          td Client: 
+          td Client / Project: 
           td
             a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
         tr
@@ -262,7 +262,7 @@ h1 Portfolio
           td Deliverables:
           td Social Banners, 3D Renders and Finished Product of Pink Spinel 18k White Gold Sakura Pendant
         tr
-          td Client: 
+          td Client / Project: 
           td
             a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
         tr
@@ -282,7 +282,7 @@ h1 Portfolio
           td Deliverables:
           td Watercolour banners designed for marketing the Yule design for the winter season.
         tr
-          td Client: 
+          td Client / Project: 
           td
             a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
         tr
@@ -302,7 +302,7 @@ h1 Portfolio
           td Deliverables:
           td Social Banners, 3D Renders and Finished Product of Pink Spinel 18k White Gold Sakura Pendant
         tr
-          td Client: 
+          td Client / Project: 
           td
             a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
         tr
@@ -322,7 +322,7 @@ h1 Portfolio
           td Deliverables:
           td Watercolour banners designed for marketing the Yule design for the winter season.
         tr
-          td Client: 
+          td Client / Project: 
           td
             a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
         tr
