Fifth row of the portfolio done

--- a/src/content/portfolio.pug
+++ b/src/content/portfolio.pug
@@ -136,7 +136,7 @@ h1 Portfolio
   .row
     .column
       img(src='./assets/images/portfolio/open-studios-morganite.jpg' style=' width: 100%; height: auto;')
-      h3 Morganite 18k Gold Earrings Handmade
+      h3 Handmade 18k Gold Morganite Earring Product and Marketing
       table(class='portfolio_item')
         tr
           td Deliverables:
@@ -176,11 +176,11 @@ h1 Portfolio
   .row
     .column
       img(src='./assets/images/portfolio/open-studios-aquamarine.jpg' style=' width: 100%; height: auto;')
-      h3 White Gold and Pink Spinel Sakura Blossoms Product and Marketing
+      h3 Handmade 18k Gold Aquamarine Pendant Product and Marketing
       table(class='portfolio_item')
         tr
           td Deliverables:
-          td Social Banners, 3D Renders and Finished Product of Pink Spinel 18k White Gold Sakura Pendant
+          td Handmade necklace pendant, still life studio photography and online product marketing.
         tr
           td Client / Project: 
           td
@@ -188,31 +188,31 @@ h1 Portfolio
         tr
           td Behind the scenes: 
           td
-            a(href='https://www.artstation.com/artwork/RyNNRy') See it on Artstation
+            a(href='https://www.artstation.com/artwork/XgxL1R') See it on Artstation
         tr
           td See it in action:
           td
-            a(href='https://grayjewellery.com.au/collections/blossoms') Visit the product page
+            a(href='https://grayjewellery.com.au/products/18-karat-gold-and-aquamarine-necklace') Visit the product page
 
     .column
       img(src='./assets/images/portfolio/open-studios-kamigen.jpg' style=' width: 100%; height: auto;')
-      h3 Yule Watercolour Campaign Banners for Winter Season of 2022
+      h3 Manga style animated film introduction sequence
       table(class='portfolio_item')
         tr
           td Deliverables:
-          td Watercolour banners designed for marketing the Yule design for the winter season.
+          td Audio and visual production of an intro sequence for a film or series of the online comics.
         tr
           td Client / Project: 
           td
-            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+            a(href='https://kamigen/') Kamigen
         tr
           td Behind the scenes: 
           td
-            a(href='https://www.artstation.com/artwork/vDwby6') See it on Artstation
+            a(href='https://www.artstation.com/artwork/8bOl8x') See it on Artstation
         tr
           td See it in action:
           td
-            a(href='https://grayjewellery.com.au/collections/all-jewellery?filter.v.price.gte=&filter.v.price.lte=&filter.p.tag=Yule.&sort_by=title-ascending') Visit the product page
+            a(href='https://www.youtube.com/watch?v=VUzLwHIt_vM') Watch the animation test
   .row
     .column
       img(src='./assets/images/portfolio/open-studios-fanta-garnet.jpg' style=' width: 100%; height: auto;')
