--- a/src/content/portfolio.pug
+++ b/src/content/portfolio.pug
@@ -216,11 +216,11 @@ h1 Portfolio
   .row
     .column
       img(src='./assets/images/portfolio/open-studios-fanta-garnet.jpg' style=' width: 100%; height: auto;')
-      h3 White Gold and Pink Spinel Sakura Blossoms Product and Marketing
+      h3 Handmade 18K Gold Fanta Garnet Necklace Pendant and Marketing
       table(class='portfolio_item')
         tr
           td Deliverables:
-          td Social Banners, 3D Renders and Finished Product of Pink Spinel 18k White Gold Sakura Pendant
+          td Handmade necklace pendant, still life studio photography and online product marketing.
         tr
           td Client / Project: 
           td
@@ -228,19 +228,19 @@ h1 Portfolio
         tr
           td Behind the scenes: 
           td
-            a(href='https://www.artstation.com/artwork/RyNNRy') See it on Artstation
+            a(href='https://www.artstation.com/artwork/blbaQg') See it on Artstation
         tr
           td See it in action:
           td
-            a(href='https://grayjewellery.com.au/collections/blossoms') Visit the product page
+            a(href='https://grayjewellery.com.au/products/18k-gold-and-fanta-garnet-necklace') Visit the product page
 
     .column
       img(src='./assets/images/portfolio/open-studios-emerald.jpg' style=' width: 100%; height: auto;')
-      h3 Yule Watercolour Campaign Banners for Winter Season of 2022
+      h3 Bespoke Emerald and Diamond 14K Gold Engagement Ring
       table(class='portfolio_item')
         tr
           td Deliverables:
-          td Watercolour banners designed for marketing the Yule design for the winter season.
+          td Hand drawn sketches, 3D model, renders and manufacture to fit gems.
         tr
           td Client / Project: 
           td
@@ -248,11 +248,10 @@ h1 Portfolio
         tr
           td Behind the scenes: 
           td
-            a(href='https://www.artstation.com/artwork/vDwby6') See it on Artstation
+            a(href='https://www.artstation.com/artwork/49kVLn') See it on Artstation
         tr
           td See it in action:
-          td
-            a(href='https://grayjewellery.com.au/collections/all-jewellery?filter.v.price.gte=&filter.v.price.lte=&filter.p.tag=Yule.&sort_by=title-ascending') Visit the product page
+          td N/A, private collection.
   .row
     .column
       img(src='./assets/images/portfolio/open-studios-2019-web-design-home.jpg' style=' width: 100%; height: auto;')
