--- a/src/content/portfolio.pug
+++ b/src/content/portfolio.pug
@@ -255,43 +255,43 @@ h1 Portfolio
   .row
     .column
       img(src='./assets/images/portfolio/open-studios-2019-web-design-home.jpg' style=' width: 100%; height: auto;')
-      h3 White Gold and Pink Spinel Sakura Blossoms Product and Marketing
+      h3 Software Engineering Consultancy Branding and Website
       table(class='portfolio_item')
         tr
           td Deliverables:
-          td Social Banners, 3D Renders and Finished Product of Pink Spinel 18k White Gold Sakura Pendant
+          td Website designs and development using custom static HTML generator.
         tr
           td Client / Project: 
           td
-            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+            a(href='https://paulbrzeski.com/') Paul Brzeski
         tr
           td Behind the scenes: 
           td
-            a(href='https://www.artstation.com/artwork/RyNNRy') See it on Artstation
+            a(href='https://www.artstation.com/artwork/WBY0By') See it on Artstation
         tr
           td See it in action:
           td
-            a(href='https://grayjewellery.com.au/collections/blossoms') Visit the product page
+            a(href='https://paulbrzeski.com/') Visit the client's website
 
     .column
       img(src='./assets/images/portfolio/open-studios-kamigengame.jpg' style=' width: 100%; height: auto;')
-      h3 Yule Watercolour Campaign Banners for Winter Season of 2022
+      h3 Three.JS Browser Based Aircraft Combat game for Kamigen
       table(class='portfolio_item')
         tr
           td Deliverables:
-          td Watercolour banners designed for marketing the Yule design for the winter season.
+          td Designs and playabable prototypes of the web based aircraft combat game concept.
         tr
           td Client / Project: 
           td
-            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+            a(href='https://kamigen.com') Kamigen
         tr
           td Behind the scenes: 
           td
-            a(href='https://www.artstation.com/artwork/vDwby6') See it on Artstation
+            a(href='https://www.artstation.com/artwork/5vPBxP') See it on Artstation
         tr
           td See it in action:
           td
-            a(href='https://grayjewellery.com.au/collections/all-jewellery?filter.v.price.gte=&filter.v.price.lte=&filter.p.tag=Yule.&sort_by=title-ascending') Visit the product page
+            a(href='https://kamigen.com/game.html') Drop into the pilots seat
   .row
     .column
       img(src='./assets/images/portfolio/open-studios-open-studios-dsc-2483-darker.jpg' style=' width: 100%; height: auto;')
