--- a/src/content/portfolio.pug
+++ b/src/content/portfolio.pug
@@ -294,41 +294,40 @@ h1 Portfolio
             a(href='https://kamigen.com/game.html') Drop into the pilots seat
   .row
     .column
-      img(src='./assets/images/portfolio/open-studios-open-studios-dsc-2483-darker.jpg' style=' width: 100%; height: auto;')
-      h3 White Gold and Pink Spinel Sakura Blossoms Product and Marketing
+      img(src='./assets/images/portfolio/open-studios-pelican.jpg' style=' width: 100%; height: auto;')
+      h3 The Pelican - Custom Solarpunk Amphibious Aircraft from Kamigen
       table(class='portfolio_item')
         tr
           td Deliverables:
-          td Social Banners, 3D Renders and Finished Product of Pink Spinel 18k White Gold Sakura Pendant
+          td Custom design and 3D renders for solarpunk styled science fiction aircraft concept.
         tr
           td Client / Project: 
           td
-            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+            a(href='https://kamigen.com/') Kamigen
         tr
           td Behind the scenes: 
           td
-            a(href='https://www.artstation.com/artwork/RyNNRy') See it on Artstation
+            a(href='https://www.artstation.com/artwork/YBqKWq') See it on Artstation
         tr
           td See it in action:
           td
-            a(href='https://grayjewellery.com.au/collections/blossoms') Visit the product page
-
+            a(href='https://www.instagram.com/p/Cr-84t1JqnA/?img_index=1') Kamigen Comics on Instagram
     .column
       img(src='./assets/images/portfolio/open-studios-langenium.jpg' style=' width: 100%; height: auto;')
-      h3 Yule Watercolour Campaign Banners for Winter Season of 2022
+      h3 Langenium MMORPG and Multimedia Franchise Artwork and Production
       table(class='portfolio_item')
         tr
           td Deliverables:
-          td Watercolour banners designed for marketing the Yule design for the winter season.
+          td Story writing, audio production, 2D and 3D artwork, UX designs and prototypes.
         tr
           td Client / Project: 
           td
-            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+            a(href='https://langenium.com/') Langenium
         tr
           td Behind the scenes: 
           td
-            a(href='https://www.artstation.com/artwork/vDwby6') See it on Artstation
+            a(href='https://www.artstation.com/artwork/1xWV2K') See it on Artstation
         tr
           td See it in action:
           td
-            a(href='https://grayjewellery.com.au/collections/all-jewellery?filter.v.price.gte=&filter.v.price.lte=&filter.p.tag=Yule.&sort_by=title-ascending') Visit the product page
+            a(href='https://www.youtube.com/watch?v=cJcr09qIVrI') Watch the original trailer
