--- a/src/content/about_us.pug
+++ b/src/content/about_us.pug
@@ -1,7 +1,7 @@
 h1 About Us
 .content
   .row.center
-    .big-column
+    .wide-column
       p
         | We&apos;re Open Studios, a multi disciplinary digital production studio.
         br
