--- a/src/templates/2023.pug
+++ b/src/templates/2023.pug
@@ -118,6 +118,9 @@ html
         noscript
             style.
                 h1#loadingSign { display: none }
+                #page-wrapper {
+                    z-index: 2;
+                }
         include ./1999_layout.pug
         #webgl-wrapper
             canvas#loader_symbols
