--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -21,13 +21,13 @@ block append page
               img(src="/assets/sites/paulbrzeski.png")
               span.hidden Paul Brzeski
       .featured
-        a(target="_blank" href="https://medium.com/@open_studios/studio-roundup-for-july-2023-1121f2bd141f")
-          img(src="/assets/leo.png")
+        a(target="_blank" href="https://medium.com/@open_studios/studio-roundup-for-august-2023-8124bc488632")
+          img(src="/assets/virgo.png")
         div(class="drop-shadow")
           h3
-            a(target="_blank" href="https://medium.com/@open_studios/studio-roundup-for-july-2023-1121f2bd141f") Studio Roundup for July 2023
+            a(target="_blank" href="https://medium.com/@open_studios/studio-roundup-for-august-2023-8124bc488632") Studio Roundup for August 2023
           p.
-            July is a month of celebration so let's celebrate! Happy Independence Day! Viva Magenta! Dive into PR on Artstation.
+            Optimising 3D for the web. Virgo and Viva Magenta! What is "good code" anyway?
     #main
       div(class="w-full")
         h1.logo
@@ -39,14 +39,14 @@ block append page
         h3 Latest media
         ul
           li
+            //- Sunstone Shield Pendant
+            iframe(width="560" height="315" src="https://www.youtube.com/embed/MQnctnguZqk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen)
+          li
             //- Kamigen Animation Test 2
             iframe(width="560" height="315" src="https://www.youtube.com/embed/VUzLwHIt_vM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen)
           li
             //- Introducing Garrett Ray Jewellery
             iframe(width="560" height="315" src="https://www.youtube.com/embed/pnEoyGDhc80" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen)
-          li
-            //- Demonology Concept Reel
-            iframe(width="560" height="315" src="https://www.youtube.com/embed/QdaT9zFnhlw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen)
       .socials
         ul
           li
